--- a/Kartoteka/Kartoteka.csproj
+++ b/Kartoteka/Kartoteka.csproj
@@ -86,7 +86,7 @@
     <Compile Include="Model\BookModel.cs" />
     <Compile Include="Model\AuthorModel.cs" />
     <Compile Include="ViewModel\AuthorViewModel.cs" />
-    <Compile Include="ClosingWindow.cs" />
+    <Compile Include="CustomCommands.cs" />
     <Compile Include="AddBook.xaml.cs">
       <DependentUpon>AddBook.xaml</DependentUpon>
     </Compile>
