--- a/Kartoteka/Kartoteka.csproj
+++ b/Kartoteka/Kartoteka.csproj
@@ -211,6 +211,12 @@
   <ItemGroup>
     <Folder Include="Skins\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Kartoteka.Domain\Kartoteka.Domain.csproj">
+      <Project>{ced04315-1020-4d2f-b4be-25208d125c27}</Project>
+      <Name>Kartoteka.Domain</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
