--- a/NewKartoteka/packages.config
+++ b/NewKartoteka/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="AutoMapper" version="6.1.1" targetFramework="net451" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net451" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
   <package id="MahApps.Metro" version="1.5.0" targetFramework="net451" />
   <package id="MvvmLightLibs" version="5.2.0.0" targetFramework="net451" />
 </packages>
