--- a/Kartoteka/App.config
+++ b/Kartoteka/App.config
@@ -18,6 +18,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="KartotekaModel" connectionString="data source=DESKTOP-HQTU03H;initial catalog=Kartoteka.DAL.KartotekaModel;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DataBaseModel" connectionString="data source=DESKTOP-HQTU03H;initial catalog=Kartoteka.DataBaseModel;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
