--- a/Kartoteka.DAL/packages.config
+++ b/Kartoteka.DAL/packages.config
@@ -3,4 +3,5 @@
   <package id="AutoMapper" version="6.1.1" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
   <package id="EntityFramework.ru" version="6.1.3" targetFramework="net451" />
+  <package id="NLog" version="4.4.12" targetFramework="net451" />
 </packages>
