--- a/NewKartoteka/packages.config
+++ b/NewKartoteka/packages.config
@@ -6,4 +6,7 @@
   <package id="MahApps.Metro" version="1.5.0" targetFramework="net451" />
   <package id="MahApps.Metro.IconPacks.FontAwesome" version="1.9.0" targetFramework="net451" />
   <package id="MvvmLightLibs" version="5.2.0.0" targetFramework="net451" />
+  <package id="NLog" version="4.4.12" targetFramework="net451" />
+  <package id="NLog.Config" version="4.4.12" targetFramework="net451" />
+  <package id="NLog.Schema" version="4.4.12" targetFramework="net451" />
 </packages>
