--- a/Kartoteka.Domain/Kartoteka.Domain.csproj
+++ b/Kartoteka.Domain/Kartoteka.Domain.csproj
@@ -50,10 +50,14 @@
   <ItemGroup>
     <Compile Include="Author.cs" />
     <Compile Include="Book.cs" />
+    <Compile Include="CSVDataExporter.cs" />
+    <Compile Include="DataExporterType.cs" />
     <Compile Include="DefaultKartotekaService.cs" />
     <Compile Include="IAuthorsRepository.cs" />
     <Compile Include="IBooksRepository.cs" />
+    <Compile Include="IDataExporter.cs" />
     <Compile Include="IKartotekaService.cs" />
+    <Compile Include="ILoggerService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
