--- a/Kartoteka.Domain/Kartoteka.Domain.csproj
+++ b/Kartoteka.Domain/Kartoteka.Domain.csproj
@@ -38,6 +38,7 @@
       <HintPath>..\packages\NLog.4.4.12\lib\net45\NLog.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
