--- a/Kartoteka.Domain/packages.config
+++ b/Kartoteka.Domain/packages.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="6.1.1" targetFramework="net451" />
+  <package id="Google.Apis" version="1.29.1" targetFramework="net451" />
+  <package id="Google.Apis.Auth" version="1.29.1" targetFramework="net451" />
+  <package id="Google.Apis.Core" version="1.29.1" targetFramework="net451" />
+  <package id="Google.Apis.Drive.v3" version="1.29.1.988" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net451" />
   <package id="NLog" version="4.4.12" targetFramework="net451" />
+  <package id="System.Net.Http" version="4.3.1" targetFramework="net451" />
 </packages>
