--- a/NewKartoteka/packages.config
+++ b/NewKartoteka/packages.config
@@ -6,7 +6,9 @@
   <package id="MahApps.Metro" version="1.5.0" targetFramework="net451" />
   <package id="MahApps.Metro.IconPacks.FontAwesome" version="1.9.0" targetFramework="net451" />
   <package id="MvvmLightLibs" version="5.2.0.0" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net451" />
   <package id="NLog" version="4.4.12" targetFramework="net451" />
   <package id="NLog.Config" version="4.4.12" targetFramework="net451" />
   <package id="NLog.Schema" version="4.4.12" targetFramework="net451" />
+  <package id="System.Net.Http" version="4.3.1" targetFramework="net451" />
 </packages>
