--- a/NewKartoteka/packages.config
+++ b/NewKartoteka/packages.config
@@ -11,4 +11,5 @@
   <package id="NLog.Config" version="4.4.12" targetFramework="net451" />
   <package id="NLog.Schema" version="4.4.12" targetFramework="net451" />
   <package id="System.Net.Http" version="4.3.1" targetFramework="net451" />
+  <package id="WpfAnimatedGif" version="1.4.15" targetFramework="net451" />
 </packages>
