--- a/NewKartoteka/App.config
+++ b/NewKartoteka/App.config
@@ -14,6 +14,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="KartotekaModel" connectionString="data source=DESKTOP-HQTU03H;initial catalog=Kartoteka.DAL.KartotekaModel;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="KartotekaModel" connectionString="data source=DESKTOP-HQTU03H;initial catalog=KartotekaDataBase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
