--- a/NewKartoteka/App.config
+++ b/NewKartoteka/App.config
@@ -7,6 +7,16 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
   </startup>
+  <appSettings>
+    <add key="clientId" value="808494698501-464qd8j0t0gcg9ci5vh1feedbi78me5a.apps.googleusercontent.com"/>
+    <add key="clientSecret" value="eJjHJnJKXc6fsdTXpwbGb-C8"/>
+    <add key="EditBookMessengerKey" value="EditBookMessenger"/>
+    <add key="EditAuthorMessengerKey" value="EditAuthorMessenger"/>
+    <add key="ClearAddBookFlyoutKey" value="ClearAddBookFlyout"/>
+    <add key="ClearAddAuthorFlyoutKey" value="ClearAddAuthorFlyout"/>
+    <add key="UpdateAddAuthorFlyoutKey" value="UpdateAddAuthorFlyout"/>    
+    <add key="UpdateAddBookFlyoutKey" value="UpdateAddBookFlyout"/>
+  </appSettings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
